Duong commit be 24/6